--- a/hugo/assets/realhelp.css
+++ b/hugo/assets/realhelp.css
@@ -304,13 +304,15 @@ p + .button { margin-top: 1rem; }
 
 .footer a { color: #FFE500; font-weight: 700; }
 
+.footer a:hover { color: #FFE500; text-decoration: none; }
+
 .footer-inner { background-color: #3B3B3B; background-image: url(assets/highstreet.jpg); background-position: 50% 80%; background-size: cover; background-repeat: no-repeat; color: #FFFFFF; max-width: 840px; margin-left: auto; margin-right: auto; width: 100%; max-width: 1004px; padding: 1rem; }
 
 @media (min-width: 768px) { .footer-inner { background-position: 50% 70%; background-size: 1304px 500px; padding: 1.5rem; } }
 
-@media (min-width: 576px) { .footer-split { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; } }
+@media (min-width: 576px) { .footer-split { -webkit-box-align: end; -ms-flex-align: end; align-items: flex-end; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; } }
 
-.footer-brand { -ms-flex-item-align: end; align-self: flex-end; padding: 0.625rem 0; }
+.footer-brand { padding: 0.625rem 0; }
 
 .footer-brand-logo { height: auto; max-width: 100%; }
 
